đổi tên thư mục từ access thành assets

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Reset font -->
 
-    <link rel="stylesheet" href="./access/css/reset.css" />
+    <link rel="stylesheet" href="./Assets/css/reset.css" />
 
     <!-- Nhúng font -->
 
@@ -24,7 +24,7 @@
 
     <!-- Style -->
 
-    <link rel="stylesheet" href="./access/css/style.css" />
+    <link rel="stylesheet" href="./Assets/Css/style.css" />
     <title>SBook</title>
   </head>
   <body>
@@ -35,7 +35,7 @@
           <!-- logo -->
           <!-- Click vào logo sẽ chuyển về trang chủ -->
           <a href="./index.html"
-            ><img src="./access/img/logo.png" alt="SBook" class="logo"
+            ><img src="./Assets/img/logo.png" alt="SBook" class="logo"
           /></a>
           <!-- search -->
           <div class="se">
@@ -55,7 +55,7 @@
               <li>
                 <a href="#!"
                   ><img
-                    src="./access/icon/Dang-nhap.png"
+                    src="./Assets/icon/Dang-nhap.png"
                     alt=""
                     class="DN"
                   />Đăng nhập</a
@@ -63,7 +63,7 @@
               </li>
               <li>
                 <a href="#!"
-                  ><img src="./access/icon/Dang-ky.jpg" alt="" class="DK" />Đăng
+                  ><img src="./Assets/icon/Dang-ky.jpg" alt="" class="DK" />Đăng
                   ký</a
                 >
               </li>
@@ -95,7 +95,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/Sale book/s1.1.jpg"
+                  src="./Assets/img/Sale book/s1.1.jpg"
                   alt="Theo nghề kiến trúc"
                   class="thumb"
                 />
@@ -123,7 +123,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/Sale book/s1.2.jpg"
+                  src="./Assets/img/Sale book/s1.2.jpg"
                   alt="Mái ấm mới của hạt dẻ"
                   class="thumb"
                 />
@@ -150,7 +150,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Sale book/s1.3.jpg"
+                  src="./Assets/img/Sale book/s1.3.jpg"
                   alt="Ông già và biển cả"
                   class="thumb"
               /></a>
@@ -175,7 +175,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Sale book/s1.4.jpg"
+                  src="./Assets/img/Sale book/s1.4.jpg"
                   alt="Robinson Crusoe"
                   class="thumb"
               /></a>
@@ -200,7 +200,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Sale book/s1.5.jpg"
+                  src="./Assets/img/Sale book/s1.5.jpg"
                   alt="Tự giác và tự lập"
                   class="thumb"
               /></a>
@@ -226,7 +226,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Sale book/s1.6.jpg"
+                  src="./Assets/img/Sale book/s1.6.jpg"
                   alt="Thơ Hàm Mặc Tử"
                   class="thumb"
               /></a>
@@ -271,7 +271,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/Top sell/2.1.jpg"
+                  src="./Assets/img/Top sell/2.1.jpg"
                   alt="Lân tinh"
                   class="thumb"
                 />
@@ -299,7 +299,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/Top sell/2.2.jpg"
+                  src="./Assets/img/Top sell/2.2.jpg"
                   alt="Chén thánh của Eris- Tập 4"
                   class="thumb"
                 />
@@ -328,7 +328,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Top sell/2.3.jpg"
+                  src="./Assets/img/Top sell/2.3.jpg"
                   alt="Búp sen xanh"
                   class="thumb"
               /></a>
@@ -353,7 +353,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Top sell/2.4.jpg"
+                  src="./Assets/img/Top sell/2.4.jpg"
                   alt="Dưới bầu trời xa cách"
                   class="thumb"
               /></a>
@@ -378,7 +378,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Top sell/2.5.jpg"
+                  src="./Assets/img/Top sell/2.5.jpg"
                   alt="Doanh nhân thế giới - Newton"
                   class="thumb"
               /></a>
@@ -406,7 +406,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Top sell/2.6.jpg"
+                  src="./Assets/img/Top sell/2.6.jpg"
                   alt=" Nuôi dạy teen giữa thời đại lo âu"
                   class="thumb"
               /></a>
@@ -445,7 +445,7 @@
           <div class="slogan-list">
             <a href="#!" class="slg"
               ><img
-                src="./Access/nho_den_lon.jpg"
+                src="./Assets/nho_den_lon.jpg"
                 alt="Từ cuốn sách nhỏ đến thế giới lớn"
             /></a>
           </div>
@@ -466,7 +466,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/COMBO/CB1.jpg"
+                  src="./Assets/img/COMBO/CB1.jpg"
                   alt="Combo Dragon Ball full color phần một"
                   class="thumb"
                 />
@@ -496,7 +496,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/COMBO/CB2.jpg"
+                  src="./Assets/img/COMBO/CB2.jpg"
                   alt="Combo Thám tử lừng danh conan"
                   class="thumb"
                 />
@@ -525,7 +525,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/COMBO/CB3.jpg"
+                  src="./Assets/img/COMBO/CB3.jpg"
                   alt="Combo Dragon Ball full color - Phần một"
                   class="thumb"
               /></a>
@@ -553,7 +553,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/COMBO/CB4.jpg"
+                  src="./Assets/img/COMBO/CB4.jpg"
                   alt="Combo Cung hoàng đạo Cổ đại ( 3 cuốn)"
                   class="thumb"
               /></a>
@@ -580,7 +580,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/COMBO/CB5.jpg"
+                  src="./Assets/img/COMBO/CB5.jpg"
                   alt="Combo Tục ngữ - Ca dao- Dân ca Việt Nam"
                   class="thumb"
               /></a>
@@ -608,7 +608,7 @@
             <!-- <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/COMBO/CB6.jpg"
+                  src="./Assets/img/COMBO/CB6.jpg"
                   alt="Combo Doraemon Thế giới khoa học (5 quyển)"
                   class="thumb"
               /></a>
@@ -646,7 +646,7 @@
         <div class="main-content">
           <div class="slogan-list">
             <a href="#!" class="slg"
-              ><img src="./Access/maga-colect.jpg" alt="Manga collection"
+              ><img src="./Assets/maga-colect.jpg" alt="Manga collection"
             /></a>
           </div>
         </div>
@@ -666,7 +666,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/Maga - comic/MC7.jpg"
+                  src="./Assets/img/Maga - comic/MC7.jpg"
                   alt="Dr. STONE"
                   class="thumb"
                 />
@@ -694,7 +694,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/Maga - comic/MC2.jpg"
+                  src="./Assets/img/Maga - comic/MC2.jpg"
                   alt="Em đến cùng mưa"
                   class="thumb"
                 />
@@ -721,7 +721,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Maga - comic/MC10.jpg"
+                  src="./Assets/img/Maga - comic/MC10.jpg"
                   alt="One-Punch Man "
                   class="thumb"
               /></a>
@@ -747,7 +747,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Maga - comic/MC4.jpg"
+                  src="./Assets/img/Maga - comic/MC4.jpg"
                   alt="Nhà có năm nàng dâu - Tập 1"
                   class="thumb"
               /></a>
@@ -774,7 +774,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Maga - comic/MC5.jpg"
+                  src="./Assets/img/Maga - comic/MC5.jpg"
                   alt="Doraemon - Tuyển tập theo chủ đề"
                   class="thumb"
               /></a>
@@ -802,7 +802,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Maga - comic/MC6.jpg"
+                  src="./Assets/img/Maga - comic/MC6.jpg"
                   alt="One-Punch Man - Tập 30 "
                   class="thumb"
               /></a>
@@ -838,7 +838,7 @@
         <div class="main-content">
           <div class="slogan-list">
             <a href="#!" class="slg"
-              ><img src="./Access/doraemon.jpg" alt="Doraemon"
+              ><img src="./Assets/doraemon.jpg" alt="Doraemon"
             /></a>
           </div>
         </div>
@@ -857,7 +857,7 @@
             <!-- Doraemon 1 -->
             <div class="book-item">
               <a href="#!">
-                <img src="./Access/img/DORAEMON/D1.jpg" alt="" class="thumb" />
+                <img src="./Assets/img/DORAEMON/D1.jpg" alt="" class="thumb" />
               </a>
               <div class="info">
                 <div class="head">
@@ -885,7 +885,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/DORAEMON/D2.jpg"
+                  src="./Assets/img/DORAEMON/D2.jpg"
                   alt="Doraemon Movie Story Màu - Nobita và chuyến thám hiểm Nam Cực Kachi Kochi"
                   class="thumb"
                 />
@@ -915,7 +915,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/DORAEMON/D3.jpg"
+                  src="./Assets/img/DORAEMON/D3.jpg"
                   alt="Doraemon Movie Story - Tân Nobita và chuyến phiêu lưu vào xứ quỷ - 7 dũng sĩ phép thuật"
                   class="thumb"
               /></a>
@@ -943,7 +943,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/DORAEMON/D4.jpg"
+                  src="./Assets/img/DORAEMON/D4.jpg"
                   alt="Doraemon Hoạt hình màu - Nobita và Viện bảo tàng bảo bối"
                   class="thumb"
               /></a>
@@ -970,7 +970,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/DORAEMON/D5.jpg"
+                  src="./Assets/img/DORAEMON/D5.jpg"
                   alt="Doraemon - Tuyển tập theo chủ đề"
                   class="thumb"
               /></a>
@@ -998,7 +998,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/DORAEMON/D6.jpg"
+                  src="./Assets/img/DORAEMON/D6.jpg"
                   alt="Doraemon Tranh truyện màu - Nobita Tây du kí - Tập 1"
                   class="thumb"
               /></a>
@@ -1037,7 +1037,7 @@
         <div class="main-content">
           <div class="slogan-list">
             <a href="#!" class="slg"
-              ><img src="./Access/wingsBook.jpg" alt="WingsBooks"
+              ><img src="./Assets/wingsBook.jpg" alt="WingsBooks"
             /></a>
           </div>
         </div>
@@ -1058,7 +1058,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/WingsBooks/WB1.jpg"
+                  src="./Assets/img/WingsBooks/WB1.jpg"
                   alt=" Làm bạn với cô nàng dễ thương nhì lớp - Tập 2"
                   class="thumb"
                 />
@@ -1088,7 +1088,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/WingsBooks/WB2.jpg"
+                  src="./Assets/img/WingsBooks/WB2.jpg"
                   alt="Hôn nhân hạnh phúc của tôi (Manga)"
                   class="thumb"
                 />
@@ -1117,7 +1117,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/WingsBooks/WB3.jpg"
+                  src="./Assets/img/WingsBooks/WB3.jpg"
                   alt=" Cecilia & Lawrence (Manga) - Tập 13"
                   class="thumb"
               /></a>
@@ -1144,7 +1144,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/WingsBooks/WB4.jpg"
+                  src="./Assets/img/WingsBooks/WB4.jpg"
                   alt="Nhà có cụ mèo già - Tập 2"
                   class="thumb"
               /></a>
@@ -1169,7 +1169,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/WingsBooks/Wb5.jpg"
+                  src="./Assets/img/WingsBooks/Wb5.jpg"
                   alt=" Arya bàn bên thỉnh thoảng lại trêu ghẹo tôi bằng tiếng Nga - Tập 7"
                   class="thumb"
               /></a>
@@ -1198,7 +1198,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/WingsBooks/Wb6.jpg"
+                  src="./Assets/img/WingsBooks/Wb6.jpg"
                   alt=" Arya bàn bên thỉnh thoảng lại trêu ghẹo tôi bằng tiếng Nga - Tập 1"
                   class="thumb"
               /></a>
@@ -1247,7 +1247,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/Ưu Đãi/UD1.jpg"
+                  src="./Assets/img/Ưu Đãi/UD1.jpg"
                   alt=" Gosick - Tập 8+9"
                   class="thumb"
                 />
@@ -1275,7 +1275,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/Ưu Đãi/UD2.jpg"
+                  src="./Assets/img/Ưu Đãi/UD2.jpg"
                   alt="Combo Trăm năm gắn bó, một lời hẹn ước (2 quyển)"
                   class="thumb"
                 />
@@ -1304,7 +1304,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Ưu Đãi/UD3.jpg"
+                  src="./Assets/img/Ưu Đãi/UD3.jpg"
                   alt=" Combo Khẽ chạm vào tự nhiên (4 quyển)"
                   class="thumb"
               /></a>
@@ -1331,7 +1331,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Ưu Đãi/UD4.jpg"
+                  src="./Assets/img/Ưu Đãi/UD4.jpg"
                   alt=" Combo Say cool to English (4 quyển)"
                   class="thumb"
               /></a>
@@ -1358,7 +1358,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Ưu Đãi/UD5.jpg"
+                  src="./Assets/img/Ưu Đãi/UD5.jpg"
                   alt=" Combo Cung hoàng đạo Cổ đại (3 cuốn)"
                   class="thumb"
               /></a>
@@ -1386,7 +1386,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Ưu Đãi/UD6.jpg"
+                  src="./Assets/img/Ưu Đãi/UD6.jpg"
                   alt=" Boxset Grimgar - Ảo ảnh và tro tàn - Tập 14 + 14 ++ (2 quyển)"
                   class="thumb"
               /></a>
@@ -1435,7 +1435,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/Nhap Khau/NK1.jpg"
+                  src="./Assets/img/Nhap Khau/NK1.jpg"
                   alt="  DT Conan Kaito Kid #2"
                   class="thumb"
                 />
@@ -1463,7 +1463,7 @@
             <div class="book-item">
               <a href="#!">
                 <img
-                  src="./Access/img/Nhap Khau/NK2.jpg"
+                  src="./Assets/img/Nhap Khau/NK2.jpg"
                   alt="DT Conan Kaito Kid #1"
                   class="thumb"
                 />
@@ -1490,7 +1490,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Nhap Khau/NK3.jpg"
+                  src="./Assets/img/Nhap Khau/NK3.jpg"
                   alt=" DT Conan - Heiji Hattori #2"
                   class="thumb"
               /></a>
@@ -1517,7 +1517,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Nhap Khau/NK4.jpg"
+                  src="./Assets/img/Nhap Khau/NK4.jpg"
                   alt=" DT Conan - Black Organization #1"
                   class="thumb"
               /></a>
@@ -1544,7 +1544,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Nhap Khau/NK5.jpg"
+                  src="./Assets/img/Nhap Khau/NK5.jpg"
                   alt=" DT Conan - Heiji Hattori #2"
                   class="thumb"
               /></a>
@@ -1572,7 +1572,7 @@
             <div class="book-item">
               <a href="#!"
                 ><img
-                  src="./Access/img/Nhap Khau/NK6.jpg"
+                  src="./Assets/img/Nhap Khau/NK6.jpg"
                   alt="DT Conan - Heiji Hattori #1"
                   class="thumb"
               /></a>
@@ -1614,7 +1614,7 @@
             <ul class="list">
               <li>
                 <a href="./index.html"
-                  ><img src="./Access/img/logo.png" alt="logo"
+                  ><img src="./Assets/img/logo.png" alt="logo"
                 /></a>
               </li>
             </ul>
