thông tin của sách kiến trúc

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <div class="book-sale">
             <!-- item 1 sale -->
             <div class="book-item">
-              <a href="#!">
+              <a href="/Thong_tin/Sach_moi/Book1.html">
                 <img
                   src="./Assets/img/Sale book/s1.1.jpg"
                   alt="Theo nghề kiến trúc"
