Thông tin Mái ấm mới của hạt dẻ

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
             <!-- item 2 sale -->
             <div class="book-item">
-              <a href="#!">
+              <a href="./Thong_tin/Sach_moi/Book2.html">
                 <img
                   src="./Assets/img/Sale book/s1.2.jpg"
                   alt="Mái ấm mới của hạt dẻ"
