Thông tin ông già và biển cả

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
             <!-- item 3 sale -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Sach_moi/Book3.html"
                 ><img
                   src="./Assets/img/Sale book/s1.3.jpg"
                   alt="Ông già và biển cả"
