thông tin Robinson Crusoe

--- a/Thong_tin/Sach_moi/Book4.html
+++ b/Thong_tin/Sach_moi/Book4.html
@@ -23,7 +23,7 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="./Style.css" />
-    <title>Ông già và biển cả</title>
+    <title>Robinson Crusoe</title>
   </head>
   <body>
     <!-- header -->
@@ -84,8 +84,8 @@
           <div class="hero-item">
             <figure class="hero__image">
               <img
-                src="./Bia_newbook/ong_gia_va_bien_ca.jpg"
-                alt="Mái ấm mới của hạt dẻ"
+                src="./Bia_newbook/Robinson Crusoe.jpg"
+                alt="Robinson Crusoe"
                 style="width: 400px; height: 550px"
               />
             </figure>
@@ -96,28 +96,26 @@
         </section>
         <!-- Hero right -->
         <section class="hero__content">
-          <h2 class="hero__heading" style="font-size: 25px">
-            ÔNG GIÀ VÀ BIỂN CẢ
-          </h2>
+          <h2 class="hero__heading" style="font-size: 25px">ROBINSON CRUSOE</h2>
           <div class="gia">
             <div class="money">
-              <p class="hero__Gia_giam">40,500₫</p>
+              <p class="hero__Gia_giam">45,000₫</p>
               <p class="hero__Gia_thuong" style="text-decoration: line-through">
-                45,000₫
+                50,000₫
               </p>
-              <p class="hero__Tiet_kiem">(Bạn đã tiết kiệm được 4,500₫)</p>
+              <p class="hero__Tiet_kiem">(Bạn đã tiết kiệm được 5,000₫)</p>
             </div>
           </div>
           <div class="hero__row">
             <div class="hero__info_book">
-              <p class="ma_Sach">- Mã sách: 6252101440008</p>
-              <p class="ISBN">- ISBN: 978-604-2-31254-7</p>
-              <p class="tac_Gia">- Tác giả: Ernest Hemingway</p>
-              <p class="doi_Tuong">- Đối tượng: Thiếu niên (11 – 15)</p>
+              <p class="ma_Sach">- Mã sách: 6252101440005</p>
+              <p class="ISBN">- ISBN: 978-604-2-24766-5</p>
+              <p class="tac_Gia">- Tác giả: Daniel Defoe</p>
+              <p class="doi_Tuong">- Đối tượng: Nhi đồng (6 – 11)</p>
               <p class="khuong_Kho">- Khuông khổ: 13x19 cm</p>
-              <p class="so_Trang">- Số trang: 144</p>
+              <p class="so_Trang">- Số trang: 212</p>
               <p class="dinh_Dang">- Định dạng: Bìa mềm</p>
-              <p class="trong_Luong">- Trọng lượng: 145 gram</p>
+              <p class="trong_Luong">- Trọng lượng: 195 gram</p>
             </div>
 
             <div class="hero__button">
@@ -314,25 +312,25 @@
 
           <!-- same book 6 -->
           <div class="book-item">
-            <a href="./Book4.html"
+            <a href="./Book3.html"
               ><img
-                src="./Sach_cung_the_loai/N.3.6.jpg"
-                alt="Robinson Crusoe"
+                src="./Sach_cung_the_loai/N.4.6.jpg"
+                alt="Ông già và biển cả"
                 class="thumb"
             /></a>
             <div class="info">
               <div class="head">
-                <h3 class="name-book break-all">Robinson Crusoe</h3>
+                <h3 class="name-book break-all">Ông già và biển cả</h3>
               </div>
               <div class="sale">
                 <p class="sale_number">-10%</p>
               </div>
               <div class="foot">
-                <span class="price sale">45,000₫</span>
+                <span class="price sale">40,500₫</span>
                 <span
                   class="price none_sale"
                   style="text-decoration: line-through"
-                  >50,000₫</span
+                  >45,000₫</span
                 >
               </div>
             </div>
