--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             </div>
             <!-- item 4 sale -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Sach_moi/Book4.html"
                 ><img
                   src="./Assets/img/Sale book/s1.4.jpg"
                   alt="Robinson Crusoe"
