Thông tin Tự giác và tự lập

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             </div>
             <!-- item 5 sale -->
             <div class="book-item">
-              <a href="#!"
+              <a href="./Thong_tin/Sach_moi/Book5.html"
                 ><img
                   src="./Assets/img/Sale book/s1.5.jpg"
                   alt="Tự giác và tự lập"
