--- a/Thong_tin/Sach_moi/Book5.html
+++ b/Thong_tin/Sach_moi/Book5.html
@@ -347,6 +347,188 @@
         </div>
       </div>
     </div>
+
+    <!-- Sách cùng bộ -->
+    <div class="Same">
+      <div class="main-content">
+        <div class="title-top">
+          <div class="info">
+            <h2 class="heading-lv2">SÁCH CÙNG BỘ</h2>
+          </div>
+        </div>
+        <!-- Thêm sách -->
+        <div class="book-sale">
+          <!-- same book 1 -->
+          <div class="book-item">
+            <a href="#!">
+              <img
+                src="./Cung_bo/CB.5.1.jpg"
+                alt="Combo Kĩ năng xã hội cho học sinh tiểu học (9 cuốn)"
+                class="thumb"
+              />
+            </a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">
+                  Combo Kĩ năng xã hội cho học sinh tiểu học (9 cuốn)
+                </h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">619,200₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                >
+                  774,000₫
+                </span>
+              </div>
+            </div>
+          </div>
+
+          <!-- same book 2 -->
+          <div class="book-item">
+            <a href="#!">
+              <img
+                src="./Cung_bo/CB.5.2.jpg"
+                alt="Kĩ năng xã hội cho học sinh tiểu học – Tự giác và tự lập "
+                class="thumb"
+              />
+            </a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">
+                  Kĩ năng xã hội cho học sinh tiểu học – Tự giác và tự lập
+                </h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">77,400₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                  >86,000₫</span
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- item 3 sale -->
+          <div class="book-item">
+            <a href="#!"
+              ><img
+                src="./Cung_bo/CB.5.3.jpg"
+                alt="Kĩ năng xã hội cho học sinh tiểu học - Kiểm soát cảm xúc"
+                class="thumb"
+            /></a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">
+                  Kĩ năng xã hội cho học sinh tiểu học - Kiểm soát cảm xúc
+                </h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">77,400₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                  >86,000₫</span
+                >
+              </div>
+            </div>
+          </div>
+          <!-- item 4 sale -->
+          <div class="book-item">
+            <a href="#!"
+              ><img
+                src="./Cung_bo/CB.5.4.jpg"
+                alt="Kĩ năng xã hội cho học sinh tiểu học - Học cách tự tin"
+                class="thumb"
+            /></a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">
+                  Kĩ năng xã hội cho học sinh tiểu học - Học cách tự tin
+                </h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">77,400₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                  >86,000₫</span
+                >
+              </div>
+            </div>
+          </div>
+          <!-- item 5 sale -->
+          <div class="book-item">
+            <a href="#!"
+              ><img
+                src="./Cung_bo/CB.5.5.jpg"
+                alt="Kĩ năng xã hội cho học sinh tiểu học - Hài hước và Lạc quan"
+                class="thumb"
+            /></a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">
+                  Kĩ năng xã hội cho học sinh tiểu học - Hài hước và Lạc quan
+                </h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">77,400₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                  >86,000₫</span
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- item 6 sale -->
+          <div class="book-item">
+            <a href="#!"
+              ><img
+                src="./Sach_cung_the_loai/hoc_cho_ai.jpg"
+                alt="Học cho ai? Học để làm gì? - Tập 1"
+                class="thumb"
+            /></a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">
+                  Học cho ai? Học để làm gì? - Tập 1
+                </h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">36,000₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                  >40,000₫</span
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Footer -->
     <footer class="footer">
       <div class="main-content">
