--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             </div>
 
             <!-- item 6 sale -->
-            <div class="book-item">
+            <!-- <div class="book-item">
               <a href="#!"
                 ><img
                   src="./Assets/img/Sale book/s1.6.jpg"
@@ -323,7 +323,7 @@
                   >
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
           <!-- Xem thêm -->
           <div class="more">
