--- a/Thong_tin/Sach_moi/Book3.html
+++ b/Thong_tin/Sach_moi/Book3.html
@@ -340,6 +340,181 @@
         </div>
       </div>
     </div>
+    <!-- Cùng bộ -->
+    <div class="Same">
+      <div class="main-content">
+        <div class="title-top">
+          <div class="info">
+            <h2 class="heading-lv2">SÁCH CÙNG BỘ</h2>
+          </div>
+        </div>
+        <!-- Thêm sách -->
+        <div class="book-sale">
+          <!-- same book 1 -->
+          <div class="book-item">
+            <a href="#!">
+              <img
+                src="./Cung_bo/CB.3.1.jpg"
+                alt="Alice ở xứ sở thần tiên"
+                class="thumb"
+              />
+            </a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">Alice ở xứ sở thần tiên</h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">45,000₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                >
+                  50 ,000₫
+                </span>
+              </div>
+            </div>
+          </div>
+
+          <!-- same book 2 -->
+          <div class="book-item">
+            <a href="#!">
+              <img
+                src="./Cung_bo/CB.3.2.jpg"
+                alt="Đảo giấu vàng "
+                class="thumb"
+              />
+            </a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">Đảo giấu vàng</h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">40,500₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                  >45 ,000₫</span
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- item 3 sale -->
+          <div class="book-item">
+            <a href="#!"
+              ><img
+                src="./Cung_bo/CB.3.3.jpg"
+                alt="Cô bé nọ có một con gấu"
+                class="thumb"
+            /></a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">Cô bé nọ có một con gấu</h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">40,500₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                  >45,000₫</span
+                >
+              </div>
+            </div>
+          </div>
+          <!-- item 4 sale -->
+          <div class="book-item">
+            <a href="#!"
+              ><img
+                src="./Cung_bo/CB.3.4.jpg"
+                alt="Chiếc chìa khóa vàng hay chuyện li kì của Buratino"
+                class="thumb"
+            /></a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">
+                  Chiếc chìa khóa vàng hay chuyện li kì của Buratino
+                </h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">135,000₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                  >150,000₫</span
+                >
+              </div>
+            </div>
+          </div>
+          <!-- item 5 sale -->
+          <div class="book-item">
+            <a href="#!"
+              ><img
+                src="./Cung_bo/CB.3.5.jpg"
+                alt="Hoàng tử nhỏ và tấm áo choàng bay"
+                class="thumb"
+            /></a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">
+                  Hoàng tử nhỏ và tấm áo choàng bay
+                </h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">45,000₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                  >50,000₫</span
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- item 6 sale -->
+          <div class="book-item">
+            <a href="#!"
+              ><img
+                src="./Cung_bo/CB.3.6.jpg"
+                alt="Chiếc chìa khóa vàng hay chuyện li kì của Buratino"
+                class="thumb"
+            /></a>
+            <div class="info">
+              <div class="head">
+                <h3 class="name-book break-all">
+                  Chiếc chìa khóa vàng hay chuyện li kì của Buratino
+                </h3>
+              </div>
+              <div class="sale">
+                <p class="sale_number">-10%</p>
+              </div>
+              <div class="foot">
+                <span class="price sale">31,500₫</span>
+                <span
+                  class="price none_sale"
+                  style="text-decoration: line-through"
+                  >35,000₫</span
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Footer -->
     <footer class="footer">
       <div class="main-content">
