--- a/Thong_tin/Sach_moi/Book5.html
+++ b/Thong_tin/Sach_moi/Book5.html
@@ -503,25 +503,25 @@
           <div class="book-item">
             <a href="#!"
               ><img
-                src="./Sach_cung_the_loai/hoc_cho_ai.jpg"
-                alt="Học cho ai? Học để làm gì? - Tập 1"
+                src="./Cung_bo/CB.5.6.jpg"
+                alt="Kĩ năng xã hội cho học sinh tiểu học - Cư xử trong gia đình"
                 class="thumb"
             /></a>
             <div class="info">
               <div class="head">
                 <h3 class="name-book break-all">
-                  Học cho ai? Học để làm gì? - Tập 1
+                  Kĩ năng xã hội cho học sinh tiểu học - Cư xử trong gia đình
                 </h3>
               </div>
               <div class="sale">
                 <p class="sale_number">-10%</p>
               </div>
               <div class="foot">
-                <span class="price sale">36,000₫</span>
+                <span class="price sale">77,400₫</span>
                 <span
                   class="price none_sale"
                   style="text-decoration: line-through"
-                  >40,000₫</span
+                  >86,000₫</span
                 >
               </div>
             </div>
